--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="settings">Settings</string>
     <string name="select_poi">Please select a point of interest</string>
     <string name="geofence_entered">Geofence Entered</string>
+    <string name="geofences_added">Geofences Added</string>
     <string name="channel_name">GeofenceStatus</string>
     <string name="notification_channel_description">Geofence status notification</string>
     <string name="content_text">Location Reminder</string>
@@ -33,6 +34,8 @@
     <string name="welcome">Welcome</string>
     <string name="err_enter_title">Please enter title</string>
     <string name="err_select_location">Please select location</string>
+
+    <string name="confirm_location">Please confirm your location</string>
 
     <!-- Error strings -->
     <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
